# pyyjson

./: .clang-format  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  default.nix  flake.nix
.github/workflows/: asan-check.yml  build-check.yml  cmake.yml  flake-check.yml  flake-update.yml  run-test.yml  windows-test.yml
dev_tools/: .envrc  _drvs.nix  asan_check.sh  autobuild.sh  automated_test.py  build.sh  build_debug.sh  build_rel_with_debug_info.sh  build_release.sh  get_env.sh  maturin-build-hook.sh  packages.nix  pre-pytest.sh  py39setuptools.nix  py_requirements.nix  read_root_pretty.md  read_string.md  sde.nix  shell.nix  shellhook.nix  supported_versions.json
src/: cpy_utils.inl  decode.c  decode.h  encode.c  encode.cpp  encode.h  encode2.cpp  encode3.cpp  encode4.cpp  encode5_impl.c  encode5_impl.inl  encode_avx2.inl  encode_avx512.inl  encode_float.inl  encode_impl.c  encode_impl.inl  encode_shared.h  encode_shared.hpp  encode_simd_utils.inl  encode_simd_utils_wrap.inl  encode_sse2.inl  encode_sse4.inl  encode_unicode_impl.inl  encode_unicode_impl_wrap.inl  encode_utils_impl.inl  pyglue.c  pyglue.h  pyyjson.c  pyyjson.h  pyyjson_config.h  simd_detect.h  simd_impl.h  tls.c  tls.h  unicode_utils.hpp  yyjson.c  yyjson.h
src/commondef/: i_in.inl.h  r_in.inl.h  r_out.inl.h  w_in.inl.h  w_out.inl.h
src/decode/: decode.c  decode.h  decode_bytes.inl.c  decode_float.inl.h  decode_str.inl.c  decode_str_common.h  decode_utils.inl.h  decode_utils_wrap.inl.c  yyjson.c
src/decode/decode_loop_dirty/: 1_f_f.inl.c  1_f_t.inl.c  1_t_f.inl.c  1_t_t.inl.c  2_f_f.inl.c  2_f_t.inl.c  2_t_f.inl.c  2_t_t.inl.c  4_f_f.inl.c  4_f_t.inl.c  4_t_f.inl.c  4_t_t.inl.c
src/encode/: encode_float.inl.h  encode_impl.c  encode_impl.inl  encode_impl.inl.h  encode_impl_wrap.inl  encode_impl_wrap.inl.h  encode_shared.h  encode_simd_impl.h  encode_simd_utils.inl  encode_simd_utils.inl.h  encode_simd_utils_wrap.inl  encode_simd_utils_wrap.inl.h  encode_unicode_impl.inl  encode_unicode_impl.inl.h  encode_unicode_impl_wrap.inl.h  encode_utf8.c  encode_utils_impl.inl  encode_utils_impl.inl.h  encode_utils_impl_wrap.inl  encode_utils_impl_wrap.inl.h
src/encode/bytes/: encode_utf8.c
src/ryu/: d2s.c  ryu.h
src/simd/: check_mask.inl.h  check_mask_wrap.inl.c  cvt.c  cvt.h  mask_table.c  mask_table.h  readwrite_utils.inl.h  readwrite_utils_wrap.inl.c  simd_detect.h  simd_impl.h
src/unicode/: indent.impl.h  reserve.impl.h  utils.c  uvector.h
src/unicode/_include_helper/: indent_wrap.h  reserve_wrap.h
src/unicode/include/: indent.h  reserve.h
test/: all_test.py  bench_test.py  decode_test.py  encode_test.py  file_test.py  test_utils.py
